--- a/static/style.css
+++ b/static/style.css
@@ -83,7 +83,7 @@ nav{
 	
 }
 nav img{
-	height: 5vh;
+	height: 7vh;
 }
 nav h1{
 	font-size: 5vh;
@@ -98,7 +98,7 @@ ul{
 	display: flex;
 	justify-content: flex-start;
 	overflow-x: scroll;
-	margin-top:7vh;
+	margin-top:9vh;
 	z-index: 9;
 	
 	/*box-shadow: 0 10px 10px 5px rgba(0,0,0,0.3);*/
@@ -133,6 +133,22 @@ ul li a{
 }
 
 
+
+a:active{
+	background-image: url("svg/disegnoselez.svg");
+	background-size: cover;
+	background-position: center;
+}
+
+#selected{
+    background-image: url("svg/disegnoselez.svg");
+	background-size: cover;
+	background-position: center;
+
+}
+#selectedA{
+	color: white;
+}
 
 
 
@@ -169,10 +185,10 @@ ul li a{
     /*background: linear-gradient(-45deg,rgba(255,255,255,0.7),rgba(255,255,255,0.1));
     border:solid 0.1vh white;
     backdrop-filter: blur(20px);*/
-    background:#FADD6A;
-    background: #736854;
+    background:#78260aff;
 box-shadow:  20px 20px 60px #625847,
              -20px -20px 60px #847861;
+    border-radius: 4%;
 
 }
 
@@ -202,9 +218,15 @@ box-shadow:  20px 20px 60px #625847,
 	margin-bottom: 3%;
 }
 
+#primoultimo{
+	margin-top:35%;
+	margin-bottom: 3%;
+}
+
 .menu h2, .menuPanino h2{
 	text-transform: uppercase;
-	color: #492213;
+	color: #D14E0D;
+	font-weight: 200;
 }
 
 .menuPanino h2{
@@ -347,6 +369,7 @@ h2{
 	justify-content: space-between;
 	align-items: center;
 	margin: 2% 0;
+
 }
 
 .row img{
@@ -357,6 +380,7 @@ h2{
 	font-size: 2.7vh;
 	font-weight: 700;
 	font-family: Montserrat;
+	color: white;
 }
 
 .rowpanino{
@@ -402,6 +426,8 @@ h2{
 
 .menu .titolo{
 	color: #492213;
+
+
 }
 
 .paninoDesc .titoloPanino{
@@ -451,6 +477,9 @@ h2{
 .rowpanino{
 		width: 40vh;
 	}
+#primoultimo{
+	margin-top: 40%;
+}
 
 
 }
